Fix layout issue caused by long words in codemirror editor

--- a/frontend/public/css/codemirror.css
+++ b/frontend/public/css/codemirror.css
@@ -260,7 +260,9 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #a22;}
 .CodeMirror-wrap pre.CodeMirror-line-like {
   word-wrap: break-word;
   white-space: pre-wrap;
-  word-break: normal;
+  /* Use this to prevent extremely long words from causing the flexbox
+   codemirror container from growing and messing up the layout */
+  word-break: break-all;
 }
 
 .CodeMirror-linebackground {
